<resources>
    <string name="app_name">RpcApp</string>
    <string name="get_started">Car Rpc is a project in which uses this devices accelerometer to control an RC car. Ready to get started?</string>
    <string name="continue_butt">Continue</string>
    <string name="welcome_text">Welcome to Car Rpc!</string>
    <string name="enter_addr">Please Enter the Esp8266\'s IP Address and Port.</string>
    <string name="port">Port</string>
    <string name="how_it_works">How it works</string>
    <string name="ip_address">IP Address</string>
    <string name="host">host</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected!</string>
    <string name="controller_key">Controller Key</string>
    <string name="unable_to_connect">Unable to Connect...</string>
    <string name="retry_connect">Retry Connecting</string>
    <string name="ip_port_wrong">This is embarrasing…Either the IP and Port you entered of the esp8266 was wrong or you are in the wrong network. Here are some options.</string>
    <string name="change_car_info">Change Car Info</string>
    <string name="butt_next">Next</string>
    <string name="red_x">red x</string>
</resources>
